--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ dependencies {
 
     compile "com.google.code.gson:gson:2.8.0"
     compile "com.sparkjava:spark-core:2.5.2"
+    compile 'de.neuland-bfi:jade4j:0.4.0'
 }
