--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ dependencies {
 
     compile "com.google.code.gson:gson:2.8.0"
     compile "com.sparkjava:spark-core:2.5.2"
+    compile 'org.slf4j:slf4j-simple:1.7.21'
     //compile 'de.neuland-bfi:jade4j:0.4.0'
 }
